Add additional counters in serverStatus().metrics.commands for collMod and create.
Something like:
{ create: { failed: Long("0"), validator: { total: Long("0"), failed: Long("0"), jsonSchema: Long("0")}, total: Long("23") }, collMod: { failed: Long("0"), validator: { total: Long("0"), failed: Long("0"), jsonSchema: Long("0")}, total: Long("0") } ... }
Increment count for 'validator.total' if non-empty 'validator' object was passed as option to the command. Increment 'validator.jsonSchema' if $jsonSchema was used anywhere within 'validator' object.
- is depended on by
-
COMPASS-6482 Investigate changes in SERVER-71392: Track usage of JSON Schema for validation
- Closed
- is documented by
-
DOCS-15862 [SERVER] Investigate changes in SERVER-71392: Track usage of JSON Schema for validation
- Closed