SERVER-71392 Add counters to track jsonSchema usage in create and collMod