src/mongo/db/stats/counters.cpp
@@ -337,6 +337,7 @@ DotsAndDollarsFieldsCounters dotsAndDollarsFieldsCounters;
 QueryFrameworkCounters queryFrameworkCounters;
 LookupPushdownCounters lookupPushdownCounters;
 SortCounters sortCounters;
+ValidatorCounters validatorCounters;
 GroupCounters groupCounters;
 
 OperatorCounters operatorCountersAggExpressions{"operatorCounters.expressions."};
