src/mongo/db/stats/counters.h
@@ -481,6 +481,49 @@ private:
     StringMap<std::unique_ptr<ExprCounter>> operatorCountersExprMap = {};
 };
 
+class ValidatorCounters {
+public:
+    ValidatorCounters() {
+        _validatorCounterMap["create"] = std::make_unique<ValidatorCounter>("create");
+        _validatorCounterMap["collMod"] = std::make_unique<ValidatorCounter>("collMod");
+    }
+
+    void incrementCounters(const StringData cmdName,
+                           const BSONObj& validator,
+                           bool parsingSucceeded) {
+        if (!validator.isEmpty()) {
+            auto validatorCounter = _validatorCounterMap.find(cmdName);
+            tassert(7139200,
+                    str::stream() << "The validator counters are not support for the command: "
+                                  << cmdName,
+                    validatorCounter != _validatorCounterMap.end());
+            validatorCounter->second->totalCounter.increment();
+
+            if (!parsingSucceeded) {
+                validatorCounter->second->failedCounter.increment();
+            }
+            if (validator.hasField("$jsonSchema")) {
+                validatorCounter->second->jsonSchemaCounter.increment();
+            }
+        }
+    }
+
+private:
+    struct ValidatorCounter {
+        ValidatorCounter(const StringData name)
+            : totalCounter{"commands." + name + ".validator.total"},
+              failedCounter{"commands." + name + ".validator.failed"},
+              jsonSchemaCounter{"commands." + name + ".validator.jsonSchema"} {}
+        CounterMetric totalCounter;
+        CounterMetric failedCounter;
+        CounterMetric jsonSchemaCounter;
+    };
+
+    StringMap<std::unique_ptr<ValidatorCounter>> _validatorCounterMap = {};
+};
+
+extern ValidatorCounters validatorCounters;
+
 // Global counters for expressions inside aggregation pipelines.
 extern OperatorCounters operatorCountersAggExpressions;
 // Global counters for match expressions.
